fixing put and delete endpoints
