# routes/item.js
@@ -6,7 +6,7 @@ const itemController = require('../controllers/item');
 router.get('/', itemController.getAllItems);
 router.get('/:id', itemController.getOneItem);
 router.post('/', itemController.createItem);
-router.put('/', itemController.updateItem);
-router.delete('/', itemController.deleteItem);
+router.put('/:id', itemController.updateItem);
+router.delete('/:id', itemController.deleteItem);
 
 module.exports = router;
